<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff333333">

    <com.oculrtech.oculr.ui.AspectImageView
        android:id="@+id/iv_logo"
        android:src="@drawable/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_alignParentTop="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/iv_logo"
        android:orientation="horizontal" 
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="@string/about_left"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="italic"
            android:textColor="#ffffffff"
            android:layout_weight="1"
            android:layout_marginRight="5dp" />

        <TextView
            android:id="@+id/tv_about_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_right"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffffff"
            android:layout_weight="1"
            android:layout_marginLeft="5dp" />
    </LinearLayout>
    
    <TextView
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/ver_str"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="12sp"
        android:textColor="#ff999999"
        android:layout_marginBottom="5dp" />

</RelativeLayout>