<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <com.oculrtech.oculr.ui.CameraView
        android:id="@+id/cv_camera"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <ImageView
        android:id="@+id/iv_cam_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/content_desc"
        android:visibility="gone"
        android:scaleType="fitXY" />

    <com.oculrtech.oculr.ui.PolyView
        android:id="@+id/pv_poly"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone" />

    <RelativeLayout
        android:id="@+id/rl_buttons"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <ImageView
            android:id="@+id/iv_cam_gradient"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:contentDescription="@string/content_desc"
            android:src="@drawable/cam_gradient" />

        <ImageButton
            android:id="@+id/bn_capture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:contentDescription="@string/content_desc"
            android:src="@drawable/take_pic" />

        <LinearLayout
            android:id="@+id/ll_donecancel"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentBottom="true"
            android:background="#3f000000"
            android:orientation="horizontal"
            android:visibility="gone" >

            <LinearLayout
                android:id="@+id/bn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_x"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cancel"
                    android:layout_gravity="center" />
            </LinearLayout>
            
             <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:background="@android:color/darker_gray" />
            
           	<LinearLayout
                android:id="@+id/bn_done"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/content_desc"
                    android:src="@drawable/ic_check"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/done"
                    android:layout_gravity="center" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</FrameLayout>